[add] calcoli per definire prezzo finale

--- a/idex.html
+++ b/idex.html
@@ -6,7 +6,7 @@
   <title>Biglietti treno </title>
 </head>
 <body>
-  
+  <div id="totale"> Il costo del tuo biglietto è:</div>
   <script src="js/script.js"></script>
 </body>
 </html>
